# unitree-webrtc-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  rust-toolchain.toml
.github/: PUBLISHING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-pypi-jetpack6.yml  publish-pypi.yml
docs/: architecture_analysis.md
examples/: action_validation.py  audio_play_file.py  audio_receive.py  audio_stream_url.py  connect.py  integration.py  lidar_stream.py  lidar_test.py  lowstate_test.py  sport_mode.py  sport_mode_state.py  video_stream.py
python/: unitree_webrtc_rs.pyi
python/unitree_webrtc/: types.py
scripts/: sync-version.sh
src/: lib.rs
src/application/: audio_service.rs  connection_service.rs  datachannel_service.rs  lidar_service.rs  mod.rs  video_service.rs
src/audio/: mod.rs
src/audio/receive/: codec.rs  mod.rs  service.rs
src/audio/transmit/: mod.rs  service.rs
src/connection/: mod.rs  service.rs  tests.rs
src/datachannel/: mod.rs
src/datachannel/core/: mod.rs  service.rs
src/datachannel/lidar/: codec.rs  mod.rs  service.rs
src/domain/: models.rs
src/infrastructure/: gstreamer_util.rs  h264_rtp.rs  lidar_codec.rs  mod.rs  rtc_engine.rs  security.rs  signaling_http.rs  video_codec.rs
src/infrastructure/rtc_engine/: engine.rs  handlers.rs  mod.rs  sdp.rs  setup.rs  state.rs
src/interface/: callbacks.rs  constants.rs  mod.rs  py_api.rs  utils.rs
src/interface/bridges/: audio.rs  connection.rs  constants.rs  datachannel.rs  mod.rs  pubsub.rs  video.rs
src/protocol/: constants.rs  mod.rs  models.rs  ports.rs
src/video/: codec.rs  mod.rs  service.rs
tests/: example_flows_test.rs  test_python_api.py
