[package]
name = "unitree-webrtc-rs"
version = "0.1.1"
edition = "2021"
authors = ["jongmoon-konglabs"]
description = "Rust-owned WebRTC transport for Unitree Go2 robots"
license = "Proprietary"

[lib]
name = "unitree_webrtc_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]
jetson = []

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
bytes = "1.5"
chrono = "0.4"
crossbeam-channel = "0.5.14"
hex = "0.4.3"
lz4_flex = "0.11"
md-5 = "0.10.6"
numpy = "0.28"
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rsa = "0.9.10"
rustls = "0.23.37"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4"] }
webrtc = "0.17.1"
opus = "0.3.1"
symphonia = { version = "0.5.5", features = ["mp3", "aac"] }
gstreamer = "0.25.1"
gstreamer-app = "0.25.0"
gstreamer-video = "0.25.0"
gstreamer-audio = "0.25.0"


[build-dependencies]
pyo3-build-config = "0.28"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
