[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "unitree-webrtc-rs"
version = "0.1.2"
description = "Rust-owned WebRTC transport for Unitree Go2 robots"
authors = [{ name = "jongmoon-konglabs" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "opencv-python>=4.8.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "unitree_webrtc_rs"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "opencv-python>=4.8.0",
    "maturin>=1.5.0",
]